# TP-GIR

./: Cargo.toml  LICENSE  README.md  archivezco.txt  log.txt  packfile_test
src/: err_comunicacion.rs  lib.rs  main.rs
src/gui/: branch_dialog.rs  branch_selector.rs  cat_file_button.rs  check_ignore_button.rs  clone_dialog.rs  comando_gui.rs  conflicts_modal.rs  estilos.css  glade1.glade  hash_object_button.rs  info_dialog.rs  log_list.rs  log_seleccionado.rs  ls_files_button.rs  ls_tree_button.rs  merge_button.rs  mod.rs  new_branch_dialog.rs  new_commit_dialog.rs  pull_button.rs  push_button.rs  rebase_button.rs  refresh.rs  remote_button.rs  rm_button.rs  show_ref_button.rs  staging_area.rs  tag_button.rs  tag_list.rs  upstream_dialog.rs
src/servidor/: gir_server.rs  http_server.rs  mod.rs  pull_request.rs  receive_pack.rs  repos_almacen.rs  upload_pack.rs  vector_threads.rs
src/utils/: index.rs  (+11 more)
tests/: tests_integracion.rs
tmp/: add_test01  add_test02  add_test03  add_test04  add_test05  add_test06  branch_init  branch_test07  cat_file_test01  cat_file_test02  cat_file_test03  check_ignore_init  check_ignore_test01  check_ignore_test03  check_ignore_test04  check_ignore_test06  checkout_test02  checkout_test03  checkout_test06  commit_init  commit_test01  commit_test02  commit_test03  commit_test04  commit_test05  fetch_01.txt  fetch_02.txt  fetch_03.txt  fetch_04.txt  fetch_05.txt  hash_object_test01  init_addear_committear_log  init_addear_status  log_test05  ls_files_init  ls_files_test01  ls_files_test02  ls_files_test03  ls_files_test04  ls_files_test05  (+44 more)
(+67 files in other folders)
