[package]
name = "gir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
flate2 = "1.0.28"
gtk = "0.18.1"
serde_json = "1.0.108"
serde = {version = "1.0.193", features = ["derive"]}
serde_qs = "0.12.0"
sha1 = "0.10.6"
serde-xml-rs = "0.6.0"
serde_urlencoded = "0.7.1"

[dev-dependencies]
serial_test = "1.0.0"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/servidor/mod.rs"
